Setting up validations

--- a/example/views/layout.haml
+++ b/example/views/layout.haml
@@ -2,6 +2,17 @@
 %html
   %head
   %body
-    - if Rack.const_defined?('Flash') && flash[:notice]
-      = flash[:notice]
+    - if Rack.const_defined?('Flash')
+      -if flash[:error]
+        .errors
+          - flash[:error].each do |error|
+            %span
+              = error
+            %br
+      -if flash[:notice]
+        .notices
+          - flash[:notice].each do |notice|
+            %span
+              = notice
+            %br
     = yield
